--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -394,6 +394,7 @@ padding:10px;
     border-bottom:solid 1px var(--ink);
     padding-bottom:20px;
     padding-left:10px;
+    line-height: 2.2;
   }
 
   dd {
