--- a/src/pages/tokushoho.astro
+++ b/src/pages/tokushoho.astro
@@ -17,7 +17,8 @@ import Footer from "../components/Footer.astro";
         <dd>鈴木　昌毅</dd>
 
         <dt>所在地</dt>
-        <dd>〒272-0111　千葉県市川市妙典5-13-33 A＆Yビル3F</dd>
+        <dd>本社：〒272-0127 千葉県市川市塩浜4-2-25-104<br>オフィス：
+          〒272-0111　千葉県市川市妙典5-13-33 A＆Yビル3F</dd>
 
         <dt>お問い合わせ先</dt>
         <dd>電話番号：047-718-3017<br />お問い合わせフォーム：<a href="https://bizup-inc.co.jp/inquiry/">https://bizup-inc.co.jp/inquiry/</a><br>※ お問い合わせはフォームよりご連絡ください。</dd>
