--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,7 +38,7 @@ const { title = "InsightBase" } = Astro.props as Props;
           <a class="" href="/googlead-report-template">Google広告レポート</a>
           <a class="" href="/faq">よくあるお問い合わせ</a>
           <a class="" href="https://manual.insightbase.jp/" target="_blank">導入マニュアル</a>
-          <a class="btn primary" href="https://bizup-inc.co.jp/inquiry/" target="_blank">お問い合わせ</a>
+          <a class="btn primary" href="/inquiry">お問い合わせ</a>
         </nav>
       </div>
     </header>
