--- a/src/pages/terms.astro
+++ b/src/pages/terms.astro
@@ -161,7 +161,7 @@ import Footer from "../components/Footer.astro";
       </section>
         <div class="text-right --pt50">
     令和7年2月15日作成<br>
-    本規約のお問い合わせ：<a href="https://bizup-inc.co.jp/inquiry/">bizup-inc.co.jp/inquiry/</a></div>  
+    本規約のお問い合わせ：<a href="/inquiry">/inquiry</a></div>  
     </div> 
     </div>
    </section>
