--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,7 @@
       <ul class="footer__list">
         <li><a href="/ga4-report-template/">GA4レポートテンプレート</a></li>
         <li><a href="/googlead-report-template/">Google広告レポートテンプレート</a></li>
-        <li><a href="https://bizup-inc.co.jp/inquiry/" target="_blank">お問い合わせ</a></li>
+        <li><a href="/inquiry">お問い合わせ</a></li>
       </ul>
 
       <!-- 中央 -->
