--- a/src/pages/inquiry/thanks.astro
+++ b/src/pages/inquiry/thanks.astro
@@ -4,6 +4,7 @@ import Footer from "../../components/Footer.astro";
 ---
 
 <Layout title="お問い合わせ完了 | InsightBase">
+  <meta slot="head" name="robots" content="noindex" />
   <section class="section__bg_w inquiry inquiry--thanks">
     <div class="content__inner inquiry__inner">
       <div class="inquiry__header">
