--- a/src/pages/inquiry.astro
+++ b/src/pages/inquiry.astro
@@ -50,7 +50,7 @@ const errorMessage = errorParam ? errorMessages[errorParam] : "";
             <select id="inquiryType" name="inquiryType" required>
               <option value="">選択してください</option>
               <option value="導入・購入の相談">導入・購入の相談</option>
-              <option value="機能・仕様の質問">機能・仕様の質問</option>
+              <option value="カスタマイズの相談">カスタマイズの相談</option>
               <option value="不具合・トラブル">不具合・トラブル</option>
               <option value="その他">その他</option>
             </select>
