--- a/src/styles/_inquiry.scss
+++ b/src/styles/_inquiry.scss
@@ -33,6 +33,10 @@
 .inquiry__panel-title {
   font-size: 24px;
   margin-bottom: 12px;
+  @media (max-width: 767px) {
+    font-size: 18px;
+    text-align: center;
+  }
 }
 
 .inquiry__panel-text {
@@ -43,6 +47,7 @@
   margin: 0;
   color: #6b6b6b;
   line-height: 1.8;
+  padding:0 12px;
 }
 
 .inquiry__form {
