--- a/src/pages/googlead-report-template.astro
+++ b/src/pages/googlead-report-template.astro
@@ -157,7 +157,7 @@ import Footer from "../components/Footer.astro";
   <div class="content__inner">
     <div class="cta-btn">
       <p>17,600円（税込）</p>
-      <a href="#" class="herobtn btn--blue btn--cubic-blue">今すぐ購入する</a>
+      <a href="#" class="herobtn btn--blue btn--cubic-blue" data-event="purchase_click" data-product="gadcta">今すぐ購入する</a>
     </div>
         <div class="cta-btn --pt20">
         <p class="--pt20">GA4＋Google広告レポートテンプレート</p>
