--- a/src/pages/ga4-report-template.astro
+++ b/src/pages/ga4-report-template.astro
@@ -18,7 +18,7 @@ import Footer from "../components/Footer.astro";
     title={`GA4<br>レポートテンプレート`}
     image="/assets/img/pc-image.png"
     ctaText="今すぐ購入する"
-    ctaLink="#cta"
+    ctaLink="https://buy.stripe.com/fZucN58AUgoC06u9439Zm02"
     description="全15ページのGA4レポートを、接続するだけで即時に出力できます。"
   />
 </Layout>
@@ -149,12 +149,12 @@ import Footer from "../components/Footer.astro";
   <div class="content__inner">
     <div class="cta-btn">
       <p>17,600円（税込）</p>
-      <a href="#" class="herobtn btn--green btn--cubic-green" data-event="purchase_click" data-product="ga4cta">今すぐ購入する</a>
+      <a href="https://buy.stripe.com/fZucN58AUgoC06u9439Zm02" class="herobtn btn--green btn--cubic-green" data-event="purchase_click" data-product="ga4cta">今すぐ購入する</a>
     </div>
     <div class="cta-btn --pt20">
         <p class="--pt20">GA4＋Google広告レポートテンプレート</p>
       <p>29,800円（税込）</p>
-      <a href="#" class="herobtn btn--blue btn--cubic-blue" data-event="purchase_click" data-product="setcta">今すぐ購入する</a>
+      <a href="https://buy.stripe.com/cNibJ18AU2xMaL89439Zm01" class="herobtn btn--blue btn--cubic-blue" data-event="purchase_click" data-product="setcta">今すぐ購入する</a>
     </div>
   </div>
 </section>
