--- a/src/pages/googlead-report-template.astro
+++ b/src/pages/googlead-report-template.astro
@@ -18,7 +18,7 @@ import Footer from "../components/Footer.astro";
     title={`Google広告<br>レポートテンプレート`}
     image="/assets/img/pc-image02.png"
     ctaText="今すぐ購入する"
-    ctaLink="#cta"
+    ctaLink="https://buy.stripe.com/6oU7sL4kEfky6uS9439Zm03"
     ctaClass="herobtn btn--blue btn--cubic-blue"
     description="全16ページのGoogle広告レポートを、接続するだけで即時に出力できます。"
   />
@@ -157,12 +157,12 @@ import Footer from "../components/Footer.astro";
   <div class="content__inner">
     <div class="cta-btn">
       <p>17,600円（税込）</p>
-      <a href="#" class="herobtn btn--blue btn--cubic-blue" data-event="purchase_click" data-product="gadcta">今すぐ購入する</a>
+      <a href="https://buy.stripe.com/6oU7sL4kEfky6uS9439Zm03" class="herobtn btn--blue btn--cubic-blue" data-event="purchase_click" data-product="gadcta">今すぐ購入する</a>
     </div>
         <div class="cta-btn --pt20">
         <p class="--pt20">GA4＋Google広告レポートテンプレート</p>
       <p>29,800円（税込）</p>
-      <a href="#" class="herobtn btn--green btn--cubic-green">今すぐ購入する</a>
+      <a href="https://buy.stripe.com/cNibJ18AU2xMaL89439Zm01" class="herobtn btn--green btn--cubic-green">今すぐ購入する</a>
   </div>
 </section>
 
