--- a/src/components/Cta.astro
+++ b/src/components/Cta.astro
@@ -36,5 +36,6 @@
         >
       </div>
     </div>
+    <p class="--pt50">購入ボタンを押すとStripeの決済画面に移動します。お支払いはStripeの安全な決済システムを利用しています。</p>
   </div>
 </section>
