--- a/src/pages/ga4-report-template.astro
+++ b/src/pages/ga4-report-template.astro
@@ -156,6 +156,7 @@ import Footer from "../components/Footer.astro";
       <p>29,800円（税込）</p>
       <a href="https://buy.stripe.com/cNibJ18AU2xMaL89439Zm01" class="herobtn btn--blue btn--cubic-blue" data-event="purchase_click" data-product="setcta">今すぐ購入する</a>
     </div>
+    <p class="--pt50">購入ボタンを押すとStripeの決済画面に移動します。お支払いはStripeの安全な決済システムを利用しています。</p>
   </div>
 </section>
 
