--- a/src/pages/googlead-report-template.astro
+++ b/src/pages/googlead-report-template.astro
@@ -157,12 +157,24 @@ import Footer from "../components/Footer.astro";
   <div class="content__inner">
     <div class="cta-btn">
       <p>17,600円（税込）</p>
-      <a href="https://buy.stripe.com/6oU7sL4kEfky6uS9439Zm03" class="herobtn btn--blue btn--cubic-blue" data-event="purchase_click" data-product="gadcta">今すぐ購入する</a>
+      <a
+        href="https://buy.stripe.com/6oU7sL4kEfky6uS9439Zm03"
+        class="herobtn btn--blue btn--cubic-blue"
+        data-event="purchase_click"
+        data-product="gadcta">今すぐ購入する</a
+      >
     </div>
-        <div class="cta-btn --pt20">
-        <p class="--pt20">GA4＋Google広告レポートテンプレート</p>
+    <div class="cta-btn --pt20">
+      <p class="--pt20">GA4＋Google広告レポートテンプレート</p>
       <p>29,800円（税込）</p>
-      <a href="https://buy.stripe.com/cNibJ18AU2xMaL89439Zm01" class="herobtn btn--green btn--cubic-green">今すぐ購入する</a>
+      <a
+        href="https://buy.stripe.com/cNibJ18AU2xMaL89439Zm01"
+        class="herobtn btn--green btn--cubic-green">今すぐ購入する</a
+      >
+    </div>
+    <p class="--pt50">
+      購入ボタンを押すとStripeの決済画面に移動します。お支払いはStripeの安全な決済システムを利用しています。
+    </p>
   </div>
 </section>
 
