--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,9 @@ import Footer from "../components/Footer.astro";
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout title="完全買切り Looker Studioテンプレート｜GA4・Google広告対応｜InsightBase Light">
+<Layout
+  title="完全買切り Looker Studioテンプレート｜GA4・Google広告対応｜InsightBase Lite"
+>
   <Hero
     hasBg={true}
     title={`毎月のレポート作成を、10分で終わらせる。`}
@@ -23,15 +25,14 @@ import Footer from "../components/Footer.astro";
 
 <section class="section__bg_w">
   <div class="content__inner">
-
-        <div class="solution">
+    <div class="solution">
       <img src="/assets/img/logo/ib_logo.svg" alt="InsightBase Logo" />
-          <h2 class="section__title">レポート作成の課題、解決します。</h2>
+      <h2 class="section__title">レポート作成の課題、解決します。</h2>
       <p>
         InsightBase
-        lightは、そんなレポート作成の「非効率」を仕組みで解決する、Looker
+        Liteは、そんなレポート作成の「非効率」を仕組みで解決する、Looker
         Studio用のテンプレートです。<br />
-        InsightBase Lightを導入することで、以下のような課題を即座に解決し、レポート作成に奪われていた時間を改善提案の時間へと変えます。
+        InsightBase Liteを導入することで、以下のような課題を即座に解決し、レポート作成に奪われていた時間を改善提案の時間へと変えます。
       </p>
     </div>
     <div class="lead__features --pt20">
@@ -61,7 +62,6 @@ import Footer from "../components/Footer.astro";
         <p>クライアントごとに形式が違い、毎回ゼロから作り直している。</p>
       </div>
     </div>
-
   </div>
 </section>
 
