--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,14 +10,14 @@ interface Props {
 
 const defaultTitle = "InsightBase";
 const defaultDescription =
-  "InsightBase Lightは、GA4・Google広告のレポート作成を効率化するLooker Studioテンプレートです。";
+  "InsightBase Liteは、GA4・Google広告のレポート作成を効率化するLooker Studioテンプレートです。";
 const defaultOgImage = "/assets/img/logo/ogp.jpg";
 
 const {
   title = defaultTitle,
   description = defaultDescription,
   ogImage = defaultOgImage,
-  ogType = "website"
+  ogType = "website",
 } = Astro.props as Props;
 
 const baseUrl = Astro.site ?? Astro.url;
@@ -49,24 +49,40 @@ const ogImageUrl = new URL(ogImage, baseUrl).toString();
     <slot name="head" />
 
     <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-W76PPZSK');</script>
-<!-- End Google Tag Manager -->
-
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-W76PPZSK");
+    </script>
+    <!-- End Google Tag Manager -->
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W76PPZSK"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-W76PPZSK"
+        height="0"
+        width="0"
+        style="display:none;visibility:hidden"></iframe></noscript
+    >
+    <!-- End Google Tag Manager (noscript) -->
 
     <header class="site-header">
       <div class="header-inner">
         <div class="brand">
-          <a href="/"><img src="/assets/img/logo/ib_logo.svg" alt="InsightBase Lite" /></a>
+          <a href="/"
+            ><img
+              src="/assets/img/logo/ib_logo.svg"
+              alt="InsightBase Lite"
+            /></a
+          >
         </div>
         <input class="nav-toggle" type="checkbox" id="nav-toggle" />
         <label
@@ -82,14 +98,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <a class="" href="/ga4-report-template">GA4レポート</a>
           <a class="" href="/googlead-report-template">Google広告レポート</a>
           <a class="" href="/faq">よくあるお問い合わせ</a>
-          <a class="" href="https://manual.insightbase.jp/" target="_blank">導入マニュアル</a>
+          <a class="" href="https://manual.insightbase.jp/" target="_blank"
+            >導入マニュアル</a
+          >
           <a class="btn primary" href="/inquiry">お問い合わせ</a>
         </nav>
       </div>
     </header>
-	<main>
-    <slot />
-	</main>
+    <main>
+      <slot />
+    </main>
 
     <a href="#" class="back-to-top" aria-label="ページ先頭へ">トップへ</a>
     <script src="/assets/js/main.js" defer></script>
