--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -439,3 +439,9 @@ padding:10px;
   font-size: 14px;
   margin-bottom: 24px;
 }
+
+.paid-box{
+background:#f4f4f4;
+padding:20px 30px;
+margin-bottom:50px;
+}
