--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
   <div class="footer__inner">
     <!-- ロゴ -->
     <div class="footer__logo">
-      <img src="/assets/img/logo/ib_logo-white.svg" alt="InsightBase Lite" />
+      <a href="/"><img src="/assets/img/logo/ib_logo-white.svg" alt="InsightBase Lite" /></a>
     </div>
 
     <!-- ナビ -->
