--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -23,7 +23,7 @@
       <!-- 右 -->
       <ul class="footer__list">
         <li><a href="/company/">会社概要</a></li>
-        <li><a href="https://bizup-inc.co.jp/privacy/" target="_blank">プライバシーポリシー</a></li>
+        <li><a href="/privacy/">プライバシーポリシー</a></li>
       </ul>
     </nav>
   </div>
