--- a/src/components/Cta.astro
+++ b/src/components/Cta.astro
@@ -36,6 +36,6 @@
         >
       </div>
     </div>
-    <p class="--pt50">購入ボタンを押すとStripeの決済画面に移動します。お支払いはStripeの安全な決済システムを利用しています。</p>
+    <p class="--pt50">購入ボタンをクリックすると、決済代行サービス Stripe の決済画面へ移動します。<br>クレジットカード情報などの決済情報はStripeが暗号化して処理し、当社が保持することはありません。</p>
   </div>
 </section>
