--- a/src/pages/googlead-report-template.astro
+++ b/src/pages/googlead-report-template.astro
@@ -172,9 +172,7 @@ import Footer from "../components/Footer.astro";
         class="herobtn btn--green btn--cubic-green">今すぐ購入する</a
       >
     </div>
-    <p class="--pt50">
-      購入ボタンを押すとStripeの決済画面に移動します。お支払いはStripeの安全な決済システムを利用しています。
-    </p>
+ <p class="--pt50">購入ボタンをクリックすると、決済代行サービス Stripe の決済画面へ移動します。<br>クレジットカード情報などの決済情報はStripeが暗号化して処理し、当社が保持することはありません。</p>
   </div>
 </section>
 
