--- a/src/pages/checkout/thanks-gad.astro
+++ b/src/pages/checkout/thanks-gad.astro
@@ -22,8 +22,8 @@ import Footer from "../../components/Footer.astro";
             ご購入いただいたテンプレートを利用するためのパスワードは、<br>決済完了後数分以内にご登録のメールアドレスへ自動送信されます。<br>
             30分以上経過してもメールが届かない場合は、<br>迷惑メールフォルダもご確認の上、お問い合わせフォームよりご連絡ください。</p>
         <a
-          href="https://manual.insightbase.jp/"
-          class="btn primary inquiry__submit">導入マニュアルへ</a
+          href="/"
+          class="btn primary inquiry__submit">トップページへ</a
         >
       </div>
     </div>
