--- a/src/pages/checkout/thanks-gad.astro
+++ b/src/pages/checkout/thanks-gad.astro
@@ -19,7 +19,7 @@ import Footer from "../../components/Footer.astro";
           <p>17,600円（税込）</p>
         </div>
         <p class="--mb50">
-            ご購入いただいたテンプレートを利用するためのパスワードは、<br>決済完了後数分以内にご登録のメールアドレスへ自動送信されます。<br>
+            ご購入いただいたテンプレートを利用するためのURLおよびパスワードは、<br>決済完了後数分以内にご登録のメールアドレスへ自動送信されます。<br>
             30分以上経過してもメールが届かない場合は、<br>迷惑メールフォルダもご確認の上、お問い合わせフォームよりご連絡ください。</p>
         <a
           href="/"
