--- a/src/pages/tokushoho.astro
+++ b/src/pages/tokushoho.astro
@@ -21,7 +21,7 @@ import Footer from "../components/Footer.astro";
           〒272-0111　千葉県市川市妙典5-13-33 A＆Yビル3F</dd>
 
         <dt>お問い合わせ先</dt>
-        <dd>電話番号：047-718-3017<br />お問い合わせフォーム：<a href="/inquiry">/inquiry</a><br>※ お問い合わせはフォームよりご連絡ください。</dd>
+        <dd>電話番号：047-718-3017<br />お問い合わせフォーム：<a href="/inquiry">お問い合わせフォーム</a><br>※ お問い合わせはフォームよりご連絡ください。</dd>
 
         <dt>販売価格</dt>
         <dd>各商品ページに記載の金額（税込）</dd>
